--- a/pom.xml
+++ b/pom.xml
@@ -11,49 +11,34 @@
 	<url>https://github.com/proudier/pacnas</url>
 
 	<properties>
+		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-		<!-- Set pullInDeps to true if you want any modules specified in the 'includes' 
-			and 'deploys' fields in your mod.json to be automatically pulled in during 
-			packaging and added inside your module. Doing this means your module won't 
-			download and install those dependencies at run-time when they're first requested. -->
-		<vertx.pullInDeps>false</vertx.pullInDeps>
-
-		<!-- Set createFatJar to true if you want to create a fat executable jar 
-			which contains the Vert.x binaries along with the module so it can be run 
-			with java -jar <jarname> -->
-		<vertx.createFatJar>false</vertx.createFatJar>
 
 		<!--Vertx module name -->
 		<module.name>${project.groupId}~${project.artifactId}~${project.version}</module.name>
-
-		<!-- The directory where the module will be assembled - you can override 
-			this on the command line with -Dmods.directory=mydir -->
-		<mods.directory>target/mods</mods.directory>
+		<!-- the main verticle class name -->
+		<main.verticle>net.pierreroudier.pacnas.MainVerticle</main.verticle>
 
 		<!--Dependency versions -->
-		<vertx.version>2.1.5</vertx.version>
+		<vertx.version>3.0.0</vertx.version>
 		<vertx.testtools.version>2.0.3-final</vertx.testtools.version>
 		<junit.version>4.11</junit.version>
+		<slf4j.version>1.7.12</slf4j.version>
+		<logback.version>1.1.3</logback.version>
+		<javassist.version>3.20.0-GA</javassist.version>
+		<dnsjava.version>2.1.7</dnsjava.version>
 
 		<!--Plugin versions -->
-		<maven.compiler.plugin.version>3.0</maven.compiler.plugin.version>
-		<maven.resources.plugin.version>2.6</maven.resources.plugin.version>
-		<maven.clean.plugin.version>2.5</maven.clean.plugin.version>
+		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
+		<maven.resources.plugin.version>2.7</maven.resources.plugin.version>
+		<maven.clean.plugin.version>2.6.1</maven.clean.plugin.version>
 		<maven.vertx.plugin.version>2.0.11-final</maven.vertx.plugin.version>
-		<maven.surefire.plugin.version>2.14</maven.surefire.plugin.version>
-		<maven.failsafe.plugin.version>2.14</maven.failsafe.plugin.version>
-		<maven.surefire.report.plugin.version>2.14</maven.surefire.report.plugin.version>
-		<maven.javadoc.plugin.version>2.9</maven.javadoc.plugin.version>
-		<maven.dependency.plugin.version>2.7</maven.dependency.plugin.version>
+		<maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
+		<maven.failsafe.plugin.version>2.18.1</maven.failsafe.plugin.version>
+		<maven.surefire.report.plugin.version>2.18.1</maven.surefire.report.plugin.version>
+		<maven.javadoc.plugin.version>2.10.3</maven.javadoc.plugin.version>
+		<maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
 	</properties>
-
-	<repositories>
-		<repository>
-			<id>sonatype-nexus-snapshots</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</repository>
-	</repositories>
 
 	<dependencies>
 		<!--Vertx provided dependencies -->
@@ -61,233 +46,111 @@
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-core</artifactId>
 			<version>${vertx.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.vertx</groupId>
-			<artifactId>vertx-platform</artifactId>
-			<version>${vertx.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.vertx</groupId>
-			<artifactId>vertx-hazelcast</artifactId>
-			<version>${vertx.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<!--Test dependencies -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.vertx</groupId>
-			<artifactId>testtools</artifactId>
-			<version>${vertx.testtools.version}</version>
-			<scope>test</scope>
-		</dependency>
+		<!-- <dependency> <groupId>junit</groupId> <artifactId>junit</artifactId> 
+			<version>${junit.version}</version> <scope>test</scope> </dependency> <dependency> 
+			<groupId>io.vertx</groupId> <artifactId>testtools</artifactId> <version>${vertx.testtools.version}</version> 
+			<scope>test</scope> </dependency> -->
 		<!--Project's dependencies -->
 		<dependency>
 			<groupId>dnsjava</groupId>
 			<artifactId>dnsjava</artifactId>
-			<version>2.1.7</version>
+			<version>${dnsjava.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>${javassist.version}</version>
 		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-
-			<!-- The vert.x Maven plugin -->
-			<plugin>
-				<groupId>io.vertx</groupId>
-				<artifactId>vertx-maven-plugin</artifactId>
-				<version>${maven.vertx.plugin.version}</version>
-				<!-- You can specify extra config to the plugin as required here <configuration> 
-					<configFile>/path/to/MyVerticle.conf</configFile> <instances>1</instances> 
-					<classpath>src/main/resources/:src/test/resources/:target/classes/:target/test-classes/</classpath> 
-					</configuration> -->
-				<!-- Make sure that the plugin uses the vert.x versions from this pom.xml 
-					not from its own pom.xml -->
-				<dependencies>
-					<dependency>
-						<groupId>io.vertx</groupId>
-						<artifactId>vertx-platform</artifactId>
-						<version>${vertx.version}</version>
-					</dependency>
-					<dependency>
-						<groupId>io.vertx</groupId>
-						<artifactId>vertx-core</artifactId>
-						<version>${vertx.version}</version>
-					</dependency>
-					<dependency>
-						<groupId>io.vertx</groupId>
-						<artifactId>vertx-hazelcast</artifactId>
-						<version>${vertx.version}</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<id>PullInDeps</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>pullInDeps</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- Other plugins required by the build -->
+			<!-- Java version -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>${maven.resources.plugin.version}</version>
-				<executions>
-					<execution>
-						<id>copy-mod-to-target</id>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<overwrite>true</overwrite>
-							<outputDirectory>${mods.directory}/${module.name}</outputDirectory>
-							<resources>
-								<resource>
-									<directory>target/classes</directory>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>${maven.dependency.plugin.version}</version>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
 				<executions>
 					<execution>
-						<id>copy-mod-dependencies-to-target</id>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${mods.directory}/${module.name}/lib</outputDirectory>
-							<includeScope>runtime</includeScope>
-						</configuration>
-					</execution>
-					<execution>
-						<id>copy-mod-dependencies-to-target-dependencies</id>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>target/dependencies</outputDirectory>
-							<includeScope>runtime</includeScope>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven.surefire.plugin.version}</version>
-				<configuration>
-					<includes>
-						<include>**/unit/*Test*.java</include>
-					</includes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>${maven.failsafe.plugin.version}</version>
-				<configuration>
-					<systemProperties>
-						<property>
-							<name>vertx.mods</name>
-							<value>${mods.directory}</value>
-						</property>
-					</systemProperties>
-					<includes>
-						<include>**/integration/**/*Test*</include>
-					</includes>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>${maven.surefire.report.plugin.version}</version>
-				<executions>
-					<execution>
-						<id>generate-test-report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report-only</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>generate-integration-test-report</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>failsafe-report-only</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<descriptors>
-						<descriptor>src/main/assembly/mod.xml</descriptor>
-					</descriptors>
-				</configuration>
-				<executions>
-					<execution>
-						<id>assemble</id>
 						<phase>package</phase>
 						<goals>
-							<goal>single</goal>
+							<goal>shade</goal>
 						</goals>
+						<configuration>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<manifestEntries>
+										<Main-Class>io.vertx.core.Starter</Main-Class>
+										<Main-Verticle>${main.verticle}</Main-Verticle>
+									</manifestEntries>
+								</transformer>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>META-INF/services/io.vertx.core.spi.VerticleFactory</resource>
+								</transformer>
+							</transformers>
+							<artifactSet>
+							</artifactSet>
+							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
+
+
+			<!-- UNIT TEST -->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
+				<version>${maven.surefire.plugin.version}</version> <configuration> <includes> 
+				<include>**/unit/*Test*.java</include> </includes> </configuration> </plugin> 
+				<plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-report-plugin</artifactId> 
+				<version>${maven.surefire.report.plugin.version}</version> <executions> <execution> 
+				<id>generate-test-report</id> <phase>test</phase> <goals> <goal>report-only</goal> 
+				</goals> </execution> <execution> <id>generate-integration-test-report</id> 
+				<phase>integration-test</phase> <goals> <goal>failsafe-report-only</goal> 
+				</goals> </execution> </executions> </plugin> -->
+
+
+			<!-- INTEGRATION TEST -->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-failsafe-plugin</artifactId> 
+				<version>${maven.failsafe.plugin.version}</version> <configuration> <systemProperties> 
+				<property> <name>vertx.mods</name> <value>${mods.directory}</value> </property> 
+				</systemProperties> <includes> <include>**/integration/**/*Test*</include> 
+				</includes> </configuration> <executions> <execution> <goals> <goal>integration-test</goal> 
+				<goal>verify</goal> </goals> </execution> </executions> </plugin> -->
+
+
+
 		</plugins>
 	</build>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>${maven.surefire.report.plugin.version}</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>${maven.javadoc.plugin.version}</version>
-				<configuration>
-					<aggregate>true</aggregate>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
+
+	<!-- <reporting> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+		<artifactId>maven-surefire-report-plugin</artifactId> <version>${maven.surefire.report.plugin.version}</version> 
+		</plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-javadoc-plugin</artifactId> 
+		<version>${maven.javadoc.plugin.version}</version> <configuration> <aggregate>true</aggregate> 
+		</configuration> </plugin> </plugins> </reporting> -->
+
 </project>
