--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<logback.version>1.1.3</logback.version>
 		<javassist.version>3.20.0-GA</javassist.version>
 		<dnsjava.version>2.1.7</dnsjava.version>
+		<testng.version>6.9.6</testng.version>
 
 		<!--Plugin versions -->
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
@@ -72,6 +73,12 @@
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>${javassist.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>${testng.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
