Updated Store interface Improved RedisStore implementation (now support NS Record) Introduced VertxUnit test

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 			<version>${vertx.version}</version>
 		</dependency>
 		<dependency>
+  			<groupId>io.vertx</groupId>
+  			<artifactId>vertx-unit</artifactId>
+  			<version>${vertx.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-redis-client</artifactId>
 			<version>${vertx.version}</version>
